Add Docker and Render deployment configuration

--- a/RA_frontend/.env.example
+++ b/RA_frontend/.env.example
@@ -1,3 +1,10 @@
+# API URL Configuration
+# Local development (uses Vite proxy to localhost:5000)
+# VITE_API_URL=
+
+# Production (set this to your Render backend URL)
+# VITE_API_URL=https://your-backend.onrender.com
+
 # Google Gemini API Key (optional)
 # Get your API key from: https://makersuite.google.com/app/apikey
 # If not provided, the Detailed Analysis page will use static content
