Add detailed directory verification in Dockerfile

--- a/RA_backend/Dockerfile
+++ b/RA_backend/Dockerfile
@@ -20,8 +20,20 @@ RUN pip install --no-cache-dir --upgrade pip setuptools wheel && \
     pip install --no-cache-dir -r requirements_runtime.txt && \
     pip install --no-cache-dir --index-url https://download.pytorch.org/whl/cpu torch torchvision
 
-# Copy application code
+# Copy application code (this copies everything including RA_Ordinal_Classification)
 COPY . .
+
+# Verify directory structure exists
+RUN echo "=== Checking file structure ===" && \
+    ls -la /app/ && \
+    echo "=== Checking RA_Ordinal_Classification ===" && \
+    ls -la /app/RA_Ordinal_Classification/ 2>&1 || echo "RA_Ordinal_Classification folder missing!" && \
+    echo "=== Checking src folder ===" && \
+    ls -la /app/RA_Ordinal_Classification/src/ 2>&1 || echo "src folder missing!" && \
+    echo "=== Checking for model.py ===" && \
+    ls -la /app/RA_Ordinal_Classification/src/model.py 2>&1 || echo "model.py missing!" && \
+    echo "=== Checking for .pth model ===" && \
+    ls -la /app/RA_Ordinal_Classification/*.pth 2>&1 || echo "Model file missing!"
 
 # Expose port (Render will override with PORT env var)
 EXPOSE $PORT
