Simplify dockerignore to ensure model files are included

--- a/RA_backend/.dockerignore
+++ b/RA_backend/.dockerignore
@@ -1,29 +1,14 @@
 __pycache__
 *.pyc
 *.pyo
-*.pyd
-.Python
-*.so
-*.egg
-*.egg-info
-dist
-build
-.pytest_cache
-.coverage
-htmlcov
 .venv
 venv
-env
-ENV
 .git
-.gitignore
 .vscode
 .idea
-*.md
-README.md
-.DS_Store
 *.log
-RA_Ordinal_Classification/.git
-RA_Ordinal_Classification/.gitignore
+.DS_Store
+
+# Exclude large unnecessary files but NOT the model or src
 RA_Ordinal_Classification/notebooks
 RA_Ordinal_Classification/results
