--- a/RA_frontend/Dockerfile
+++ b/RA_frontend/Dockerfile
@@ -3,6 +3,10 @@ FROM node:18-alpine AS builder
 
 WORKDIR /app
 
+# Build argument for API URL (passed from Render)
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+
 # Copy package files
 COPY package*.json ./
 
@@ -12,8 +16,8 @@ RUN npm ci
 # Copy source code
 COPY . .
 
-# Build app with production mode
-RUN npm run build
+# Build app with production mode (VITE_API_URL is embedded during build)
+RUN echo "Building with VITE_API_URL=$VITE_API_URL" && npm run build
 
 # Production stage
 FROM nginx:alpine
