--- a/RA_backend/requirements_runtime.txt
+++ b/RA_backend/requirements_runtime.txt
@@ -3,6 +3,7 @@ flask-cors==4.0.0
 numpy==1.24.3
 pillow==10.2.0
 gunicorn==21.2.0
+tensorflow-cpu==2.15.0
 
 # Optional: ONNX runtime if using ONNX model
 # onnxruntime==1.15.1
