--- a/render.yaml
+++ b/render.yaml
@@ -5,17 +5,13 @@ services:
     env: docker
     dockerfilePath: RA_backend/Dockerfile
     dockerContext: RA_backend
-    plan: starter # Change to 'standard' or higher for better performance
+    plan: starter # 512MB RAM - CORAL model only
     healthCheckPath: /health
     envVars:
       - key: PORT
         value: 10000
       - key: PYTHONUNBUFFERED
         value: 1
-      - key: ENABLE_RESNET
-        value: false  # Disable ResNet50 to fit in 512MB (set to 'true' on paid plans with 1GB+ RAM)
-      - key: TF_CPP_MIN_LOG_LEVEL
-        value: 2
 
   # Frontend service
   - type: web
