--- a/RA_backend/requirements.txt
+++ b/RA_backend/requirements.txt
@@ -4,6 +4,7 @@ flask-cors==4.0.0
 # Do NOT install torch/torchvision directly from this file to avoid
 # platform/CUDA compatibility issues. After installing PyTorch,
 # run: `pip install -r requirements.txt`
+tensorflow-cpu==2.15.0
 numpy==1.24.3
 pillow==10.2.0
 opencv-python==4.8.1.78
